# rusty_k8s

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md
k8s-config/: Cargo.toml  build.rs
k8s-config/src/: main.rs
k8s-macro/: Cargo.toml
k8s-macro/src/: lib.rs
