[package]
name = "k8s-config"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-macro = { path = "../k8s-macro" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
