[package]
name = "k8s-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
